--- a/day-five/asset/asset/practice/css/style.css
+++ b/day-five/asset/asset/practice/css/style.css
@@ -7,6 +7,11 @@
 	text-decoration: none;
 	outline: none;
 	box-sizing: border-box;
+
+}
+
+body{
+	font-family: "Roboto", sans-serif;   
 }
 
 ol, ul {
@@ -33,8 +38,6 @@ header .wrapper{
 	align-items: center;
 
 }
-
-header .wrapper h1{}
 
 header .wrapper h1 img{
 	width: 120px;
@@ -68,6 +71,50 @@ header .wrapper ul li:last-child a{
 	padding: 12px 24px;
 	border-radius: 24px;
 }
+
+#home{
+	padding: 120px 0;
+}
+
+#home .wrapper{
+	display: flex;
+	justify-content: space-between;
+}
+
+#home .wrapper .left{
+	width: 48%;
+}
+
+#home .wrapper .left h1{
+	font-size: 35px;
+	font-weight: 800;
+	margin-bottom: 32px;
+}
+
+#home .wrapper .left p{
+	font-size: 18px;
+	font-weight: 400;
+	margin-bottom: 40px;
+	color: rgb(121, 121, 121);
+}
+
+#home .wrapper .left a{
+	background-color:#3D00B7;
+	color: white;
+	padding: 12px 24px;
+	border-radius: 24px;
+}
+
+#home .wrapper .right{
+	width: 48%;
+}
+
+#home .wrapper .right img{
+	width: 100%;
+}
+
+
+
 
 
 
