--- a/day-five/asset/asset/task/css/style.css
+++ b/day-five/asset/asset/task/css/style.css
@@ -74,7 +74,7 @@ header .wrapper ul li a:hover{
     content: "";
     position: absolute;
     left: 0;
-    bottom: 2px; 
+    bottom: 3px; 
     width: 100%;
     height: 0.2em;
     background-color: #FBE0DC;
@@ -90,13 +90,61 @@ header .wrapper ul li:last-child a{
 }
 
 
+#home{
+	padding: 60px 0;
+}
+
+#home .wrapper{
+	display: flex;
+	justify-content: space-between;
+}
+
+#home .wrapper .left{
+	width: 48%;
+	align-content: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#home .wrapper .left .left-section{
+	width: 80%;
+	justify-content: center;
+	margin: 0 auto;
+}
 
 
+#home .wrapper .left h1{
+	font-size: 40px;
+	font-weight: 700;
+	margin-bottom: 32px;
+}
+#home .wrapper .left h1 span{
+	font-weight: 800;
+}
 
 
+#home .wrapper .left p{
+	font-size: 18px;
+	font-weight: 400;
+	margin-bottom: 40px;
+	color: rgb(121, 121, 121);
+}
 
+#home .wrapper .left a{
+	width: 160px;
+	text-align: center;
+	font-weight: 600;
+	padding: 10px 20px;
+	background-color: #F7C531;
+	border-radius: 25px 25px 10px 10px ;
+}
 
+#home .wrapper .right{
+	width: 48%;
+}
 
-
-
+#home .wrapper .right img{
+	width: 90%;
+}
 
