--- a/Main-Task/main-challenge_6eXeU32/main-challenge/css/style.css
+++ b/Main-Task/main-challenge_6eXeU32/main-challenge/css/style.css
@@ -6,3 +6,25 @@
 body {
     font-family: "Poppins", sans-serif;
 }
+
+
+
+/* Customize scrollbar */
+::-webkit-scrollbar {
+  width: 0px; /* Width of the scrollbar */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Background color of the track */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scrollbar handle */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scrollbar handle on hover */
+}
